--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
-                    <img src="/public/images/founder-photo-placeholder.jpg" alt="David, Founder of Admiral Energy" class="w-full rounded-lg shadow-lg">
+                    <img src="/public/images/david-edwards.jpg" alt="David Edwards, Founder of Admiral Energy" class="w-full rounded-lg shadow-lg">
                     <p class="text-sm text-gray-500 text-center mt-2">David, Founder & Lead Advisor</p>
                 </div>
                 
