ui: add white badge behind header logo for dark navbar contrast

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
                 <div class="flex items-center">
-                    <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-10 w-auto">
+                    <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-10 w-auto bg-white rounded-md p-1 shadow-sm">
                     <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                 </div>
                 
