ui: normalize logo sizing; add subtle contrast in header/footer

--- a/powerpair.html
+++ b/powerpair.html
@@ -45,7 +45,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-10 w-auto bg-white rounded-md p-1 shadow-sm">
+                    <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-8 md:h-9 w-auto bg-white rounded-lg p-0.5 shadow-sm">
                     <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                 </div>
                 
@@ -483,7 +483,7 @@
             <div class="grid md:grid-cols-4 gap-8">
                 <div class="md:col-span-2">
                     <div class="flex items-center mb-4">
-                        <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-8 w-auto">
+                        <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-7 w-auto bg-white/90 rounded-md p-0.5 shadow-sm">
                         <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                     </div>
                     <p class="text-gray-300 mb-4">Backup Power System Experts for North Carolina. Battery first, solar when it makes sense.</p>
