ui: finalize footer contrast on contact-success; subtle ring on header logo

--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-8 md:h-9 w-auto bg-white rounded-lg p-0.5 shadow-sm">
+                    <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-8 md:h-9 w-auto bg-white rounded-lg p-0.5 shadow-sm ring-1 ring-black/5">
                     <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                 </div>
                 
