--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
                 <div class="flex items-center">
-                    <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-8 md:h-9 w-auto bg-white rounded-lg p-0.5 shadow-sm">
+                    <img src="/public/logos/admiral-energy-logo-v2.png" alt="Admiral Energy" class="h-8 md:h-9 w-auto bg-white rounded-lg p-0.5 shadow-sm ring-1 ring-black/5">
                     <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                 </div>
                 
