--- a/404.html
+++ b/404.html
@@ -6,10 +6,15 @@
     <title>Page Not Found - Admiral Energy</title>
     <meta name="description" content="The page you're looking for doesn't exist. Find backup power information and honest solar guidance at Admiral Energy.">
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/logos/admiral-energy-icon.png" />
-    <link rel="apple-touch-icon" href="/public/logos/admiral-energy-icon.png" />
+    <!-- Icons / PWA -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/logos/ae-favicon-16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/logos/ae-favicon-32.png" />
+    <link rel="icon" href="/public/logos/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/logos/ae-apple-180.png" />
+    <link rel="manifest" href="/public/logos/site.webmanifest" />
     <meta name="theme-color" content="#0c2f4a" />
+
+    <!-- Social -->
     <meta property="og:image" content="/public/logos/admiral-energy-share.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/public/logos/admiral-energy-share.png" />
@@ -39,7 +44,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <img src="/public/logos/admiral-energy-logo-v2-background.png" alt="Admiral Energy" class="h-8 md:h-9 w-auto bg-white rounded-lg p-0.5 shadow-sm ring-1 ring-black/5">
+                    <img src="/public/logos/ae-logo-horiz-bg.png" alt="Admiral Energy" class="h-8 md:h-9 w-auto rounded-lg p-0.5 shadow-sm ring-1 ring-black/5">
                     <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                 </div>
                 
@@ -139,7 +144,7 @@
             <div class="grid md:grid-cols-4 gap-8">
                 <div class="md:col-span-2">
                     <div class="flex items-center mb-4">
-                        <img src="/public/logos/admiral-energy-logo-v2-background.png" alt="Admiral Energy" class="h-7 w-auto bg-white/90 rounded-md p-0.5 shadow-sm">
+                        <img src="/public/logos/ae-logo-horiz-bg.png" alt="Admiral Energy" class="h-7 w-auto rounded-md p-0.5 shadow-sm ring-1 ring-black/5">
                         <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                     </div>
                     <p class="text-gray-300 mb-4">Backup Power System Experts for North Carolina. Battery first, solar when it makes sense.</p>
@@ -186,3 +191,6 @@
     </script>
 </body>
 </html>
+
+
+
