--- a/contact.html
+++ b/contact.html
@@ -237,8 +237,14 @@
                 <p class="text-sm text-slate-600"><span class="mr-3">Takes 2 minutes</span> <span>• We'll respond within 24 hours with an honest assessment</span></p>
             </div>
             
-            <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/contact-success.html" class="mx-auto max-w-4xl rounded-2xl bg-white/90 p-6 md:p-8 shadow-md ring-1 ring-black/5">
-              <input type="hidden" name="form-name" value="contact">
+            <form 
+              name="admiral-contact" 
+              method="POST" 
+              data-netlify="true"
+              netlify-honeypot="bot-field"
+              action="/thank-you.html"
+              class="mx-auto max-w-4xl rounded-2xl bg-white/90 p-6 md:p-8 shadow-md ring-1 ring-black/5">
+              <input type="hidden" name="form-name" value="admiral-contact">
               <p class="hidden">
                 <label>Don't fill this out: <input name="bot-field"></label>
               </p>
