fix(contact): update JavaScript form selector to match admiral-contact form name

--- a/contact.html
+++ b/contact.html
@@ -505,7 +505,7 @@
         });
 
         // Enhanced form handling with validation and better UX
-        const form = document.querySelector('form[name="contact"]');
+        const form = document.querySelector('form[name="admiral-contact"]');
         if (form) {
             // Form field interaction tracking (for analytics)
             const formFields = form.querySelectorAll('input, select, textarea');
