feat(chat): add The Admiral chat launcher with floating button and inline CTA
- Create admiral-chat.js widget with floating button and modal panel
- Add GTM event tracking for admiral_chat_opened and admiral_chat_open_link
- Replace Quick Questions placeholder with data-admiral-placeholder
- Support both floating button and inline [data-admiral-chat] triggers
- Opens custom GPT in new tab: https://chatgpt.com/g/g-68e9759437b8819199422ed61feba90b-the-admiral-your-solar-advisor

--- a/index.html
+++ b/index.html
@@ -404,10 +404,14 @@
             <p class="text-gray-600 mb-8">Ask The Admiral—our AI assistant trained on North Carolina solar and battery regulations</p>
             
             <div class="bg-white p-6 rounded-lg shadow-md">
-                <p class="text-gray-500 mb-4">The Admiral chat widget will be embedded here</p>
-                <div class="bg-gray-100 p-8 rounded border-2 border-dashed border-gray-300">
-                    <p class="text-gray-600">📋 Placeholder for The Admiral chat widget</p>
-                    <p class="text-sm text-gray-500 mt-2">iframe or custom embed will go here</p>
+                <div class="bg-gray-100 p-8 rounded border-2 border-dashed border-gray-300" data-admiral-placeholder>
+                    <!-- Replaced by admiral-chat.js at runtime -->
+                    <p class="text-gray-600">Loading The Admiral…</p>
+                    <noscript>
+                        <p class="text-gray-600 mt-2">
+                            JavaScript is off. <a href="https://chatgpt.com/g/g-68e9759437b8819199422ed61feba90b-the-admiral-your-solar-advisor" target="_blank" rel="noopener" class="text-admiral-navy underline font-semibold">Open The Admiral</a>.
+                        </p>
+                    </noscript>
                 </div>
             </div>
         </div>
@@ -499,6 +503,8 @@
             });
         });
     </script>
+    
+    <script defer src="/public/scripts/admiral-chat.js"></script>
 </body>
 </html>
 
