Integrate Admiral on-page chatbot with Netlify Function
- Add admiral-chat-ui.js: full embedded chat interface with localStorage persistence
- Add netlify/functions/admiral-chat.js: OpenAI API proxy with CORS support
- Add admiral-chat-enabled meta flag for feature detection
- Remove legacy admiral-chat.js script to prevent conflicts
- Configure Netlify Functions in netlify.toml
- Include GTM event tracking for chat interactions

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/public/logos/ae-apple-180.png" />
     <link rel="manifest" href="/public/logos/site.webmanifest" />
     <meta name="theme-color" content="#0c2f4a" />
+    <meta name="admiral-chat-enabled" content="true" />
 
     <!-- Social -->
     <meta property="og:image" content="/public/logos/admiral-energy-share.png" />
@@ -503,10 +504,8 @@
             });
         });
     </script>
-    
-    <script defer src="/public/scripts/admiral-chat.js"></script>
+
+    <script defer src="/public/scripts/admiral-chat-ui.js"></script>
 </body>
 </html>
-
-
 
