--- a/contact.html
+++ b/contact.html
@@ -236,14 +236,14 @@
                 <p class="text-xl text-slate-700 mb-3">What You'll Get: <span class="text-admiral-gold font-semibold">Custom backup power analysis</span> • <span class="text-admiral-gold font-semibold">Honest ROI calculation</span> • <span class="text-admiral-gold font-semibold">Zero pressure</span></p>
                 <p class="text-sm text-slate-600"><span class="mr-3">Takes 2 minutes</span> <span>• We'll respond within 24 hours with an honest assessment</span></p>
             </div>
-            
-            <form 
-              name="admiral-contact" 
-              method="POST" 
-              data-netlify="true"
-              netlify-honeypot="bot-field"
-              action="/thank-you.html"
-              class="mx-auto max-w-4xl rounded-2xl bg-white/90 p-6 md:p-8 shadow-md ring-1 ring-black/5">
+<!-- Netlify form submission uses query parameter to bypass automatic handler -->
+<form
+  name="admiral-contact"
+  method="POST"
+  action="/thank-you.html?ok=1"
+  data-netlify="true"
+  netlify-honeypot="bot-field"
+  class="mx-auto max-w-4xl rounded-2xl bg-white/90 p-6 md:p-8 shadow-md ring-1 ring-black/5">
               <input type="hidden" name="form-name" value="admiral-contact">
               <p class="hidden">
                 <label>Don't fill this out: <input name="bot-field"></label>
