feat(lead): add /quote.html + OTP functions; replace thank-you; add redirects; archive import

--- a/thank-you.html
+++ b/thank-you.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Thank you for contacting Admiral Energy. We'll get back to you within 24 hours with honest backup power guidance.">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://admiralenergy.ai/thank-you.html" />
+    <link rel="canonical" href="https://admiralenergy.ai/thank-you/" />
     
     <!-- Prevent accidental indexing of success page -->
     <meta name="robots" content="noindex,follow" />
