--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <a href="/services.html" class="hover:text-admiral-gold transition-colors">Services</a>
                         <a href="/powerpair.html" class="hover:text-admiral-gold transition-colors">PowerPair</a>
                         <a href="/case-studies.html" class="hover:text-admiral-gold transition-colors">Case Studies</a>
-                        <a href="/contact.html" class="bg-admiral-gold text-admiral-navy px-4 py-2 rounded-md hover:bg-yellow-400 transition-colors font-semibold">Contact</a>
+                        <a href="/quote.html" class="bg-admiral-gold text-admiral-navy px-4 py-2 rounded-md hover:bg-yellow-400 transition-colors font-semibold">Contact</a>
                     </div>
                 </div>
                 
@@ -101,7 +101,7 @@
                 <a href="/services.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">Services</a>
                 <a href="/powerpair.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">PowerPair</a>
                 <a href="/case-studies.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">Case Studies</a>
-                <a href="/contact.html" class="block px-3 py-2 bg-admiral-gold text-admiral-navy rounded-md font-semibold">Contact</a>
+                <a href="/quote.html" class="block px-3 py-2 bg-admiral-gold text-admiral-navy rounded-md font-semibold">Contact</a>
             </div>
         </div>
     </nav>
