fix(routing): redirect legacy /contact* → /quote.html and update internal links; remove contact.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h1 class="text-4xl md:text-6xl font-bold mb-6">Keep Your Home Running. No Matter What.</h1>
             <p class="text-xl md:text-2xl mb-8 text-blue-100">Backup Power Systems for North Carolina—battery first, solar when it makes sense.</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="/contact.html" class="bg-admiral-gold text-admiral-navy px-8 py-4 rounded-lg font-semibold text-lg hover:bg-yellow-400 transition-colors">Get Your Backup Plan</a>
+                <a href="/quote.html" class="bg-admiral-gold text-admiral-navy px-8 py-4 rounded-lg font-semibold text-lg hover:bg-yellow-400 transition-colors">Get Your Backup Plan</a>
                 <a href="#approach" class="border-2 border-white text-white px-8 py-4 rounded-lg font-semibold text-lg hover:bg-white hover:text-admiral-navy transition-colors">How It Works ↓</a>
             </div>
         </div>
@@ -328,7 +328,7 @@
             <div class="mt-8 text-center">
                 <p class="text-gray-600 italic">
                     Our take: Batteries + solar make sense for most homeowners we work with—but generators are perfectly valid if your priorities are different. 
-                    <a href="/contact.html" class="text-admiral-navy underline hover:no-underline font-semibold">Let's run your specific numbers</a>.
+                    <a href="/quote.html" class="text-admiral-navy underline hover:no-underline font-semibold">Let's run your specific numbers</a>.
                 </p>
             </div>
         </div>
@@ -425,7 +425,7 @@
             <p class="text-xl mb-8 text-blue-100">Book a free, no-pressure consultation. We'll run the numbers for your home.</p>
             
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="/contact.html" class="bg-admiral-gold text-admiral-navy px-8 py-4 rounded-lg font-semibold text-lg hover:bg-yellow-400 transition-colors">Book Free Consultation</a>
+                <a href="/quote.html" class="bg-admiral-gold text-admiral-navy px-8 py-4 rounded-lg font-semibold text-lg hover:bg-yellow-400 transition-colors">Book Free Consultation</a>
                 <a href="mailto:david@admiralenergy.ai" class="border-2 border-white text-white px-8 py-4 rounded-lg font-semibold text-lg hover:bg-white hover:text-admiral-navy transition-colors">Email David Directly</a>
             </div>
         </div>
@@ -458,8 +458,8 @@
                     <h3 class="font-semibold mb-4">Contact</h3>
                     <ul class="space-y-2 text-gray-300">
                         <li>Kings Mountain, NC</li>
-                        <li><a href="mailto:david@admiralenergy.ai" class="hover:text-admiral-gold transition-colors">david@admiralenergy.ai</a></li>
-                        <li><a href="/contact.html" class="hover:text-admiral-gold transition-colors">Book Consultation</a></li>
+                        <li>Email: <a href="mailto:david@admiralenergy.ai" class="hover:text-admiral-gold transition-colors">david@admiralenergy.ai</a></li>
+                        <li><a href="/quote.html" class="hover:text-admiral-gold transition-colors">Book Consultation</a></li>
                     </ul>
                 </div>
             </div>
