--- a/powerpair.html
+++ b/powerpair.html
@@ -75,7 +75,7 @@
                         <a href="/services.html" class="hover:text-admiral-gold transition-colors">Services</a>
                         <a href="/powerpair.html" class="text-admiral-gold">PowerPair</a>
                         <a href="/case-studies.html" class="hover:text-admiral-gold transition-colors">Case Studies</a>
-                        <a href="/contact.html" class="bg-admiral-gold text-admiral-navy px-4 py-2 rounded-md hover:bg-yellow-400 transition-colors font-semibold">Contact</a>
+                        <a href="/quote.html" class="bg-admiral-gold text-admiral-navy px-4 py-2 rounded-md hover:bg-yellow-400 transition-colors font-semibold">Contact</a>
                     </div>
                 </div>
                 
@@ -96,7 +96,7 @@
                 <a href="/services.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">Services</a>
                 <a href="/powerpair.html" class="block px-3 py-2 bg-gray-700 rounded-md">PowerPair</a>
                 <a href="/case-studies.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">Case Studies</a>
-                <a href="/contact.html" class="block px-3 py-2 bg-admiral-gold text-admiral-navy rounded-md font-semibold">Contact</a>
+                <a href="/quote.html" class="block px-3 py-2 bg-admiral-gold text-admiral-navy rounded-md font-semibold">Contact</a>
             </div>
         </div>
     </nav>
@@ -490,7 +490,7 @@
             <p class="text-xl text-gray-600 mb-8">Let's run the numbers and see if PowerPair makes sense for your home.</p>
             
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="/contact.html" class="bg-admiral-gold text-admiral-navy px-8 py-4 rounded-lg font-semibold text-lg hover:bg-yellow-400 transition-colors">Get PowerPair Analysis</a>
+                <a href="/quote.html" class="bg-admiral-gold text-admiral-navy px-8 py-4 rounded-lg font-semibold text-lg hover:bg-yellow-400 transition-colors">Get PowerPair Analysis</a>
                 <a href="/services.html#battery" class="border-2 border-admiral-navy text-admiral-navy px-8 py-4 rounded-lg font-semibold text-lg hover:bg-admiral-navy hover:text-white transition-colors">See Battery Options</a>
             </div>
         </div>
@@ -524,7 +524,7 @@
                     <ul class="space-y-2 text-gray-300">
                         <li>Kings Mountain, NC</li>
                         <li><a href="mailto:david@admiralenergy.ai" class="hover:text-admiral-gold transition-colors">david@admiralenergy.ai</a></li>
-                        <li><a href="/contact.html" class="hover:text-admiral-gold transition-colors">Book Consultation</a></li>
+                        <li><a href="/quote.html" class="hover:text-admiral-gold transition-colors">Book Consultation</a></li>
                     </ul>
                 </div>
             </div>
@@ -547,6 +547,7 @@
     </script>
 </body>
 </html>
+
 
 
 
