--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                         <a href="/services.html" class="hover:text-admiral-gold transition-colors">Services</a>
                         <a href="/powerpair.html" class="hover:text-admiral-gold transition-colors">PowerPair</a>
                         <a href="/case-studies.html" class="hover:text-admiral-gold transition-colors">Case Studies</a>
-                        <a href="/contact.html" class="bg-admiral-gold text-admiral-navy px-4 py-2 rounded-md hover:bg-yellow-400 transition-colors font-semibold">Contact</a>
+                        <a href="/quote.html" class="bg-admiral-gold text-admiral-navy px-4 py-2 rounded-md hover:bg-yellow-400 transition-colors font-semibold">Contact</a>
                     </div>
                 </div>
                 
@@ -96,7 +96,7 @@
                 <a href="/services.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">Services</a>
                 <a href="/powerpair.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">PowerPair</a>
                 <a href="/case-studies.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">Case Studies</a>
-                <a href="/contact.html" class="block px-3 py-2 bg-admiral-gold text-admiral-navy rounded-md font-semibold">Contact</a>
+                <a href="/quote.html" class="block px-3 py-2 bg-admiral-gold text-admiral-navy rounded-md font-semibold">Contact</a>
             </div>
         </div>
     </nav>
@@ -142,7 +142,7 @@
       </p>
 
       <div class="pt-4">
-        <a href="/contact.html#book" class="inline-block px-5 py-3 rounded-lg bg-[#0c2f4a] text-white">Book a Consultation</a>
+        <a href="/quote.html#book" class="inline-block px-5 py-3 rounded-lg bg-[#0c2f4a] text-white">Book a Consultation</a>
       </div>
 
       <div class="mt-8">
@@ -179,7 +179,7 @@
                     <ul class="space-y-2 text-gray-300">
                         <li>Kings Mountain, NC</li>
                         <li><a href="mailto:david@admiralenergy.ai" class="hover:text-admiral-gold transition-colors">david@admiralenergy.ai</a></li>
-                        <li><a href="/contact.html" class="hover:text-admiral-gold transition-colors">Book Consultation</a></li>
+                        <li><a href="/quote.html" class="hover:text-admiral-gold transition-colors">Book Consultation</a></li>
                     </ul>
                 </div>
             </div>
@@ -202,6 +202,7 @@
     </script>
 </body>
 </html>
+
 
 
 
