--- a/thank-you.html
+++ b/thank-you.html
@@ -74,7 +74,7 @@
                         <a href="/services.html" class="hover:text-admiral-gold transition-colors">Services</a>
                         <a href="/powerpair.html" class="hover:text-admiral-gold transition-colors">PowerPair</a>
                         <a href="/case-studies.html" class="hover:text-admiral-gold transition-colors">Case Studies</a>
-                        <a href="/contact.html" class="bg-admiral-gold text-admiral-navy px-4 py-2 rounded-md hover:bg-yellow-400 transition-colors font-semibold">Contact</a>
+                        <a href="/quote.html" class="bg-admiral-gold text-admiral-navy px-4 py-2 rounded-md hover:bg-yellow-400 transition-colors font-semibold">Contact</a>
                     </div>
                 </div>
                 
@@ -95,7 +95,7 @@
                 <a href="/services.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">Services</a>
                 <a href="/powerpair.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">PowerPair</a>
                 <a href="/case-studies.html" class="block px-3 py-2 hover:bg-gray-700 rounded-md">Case Studies</a>
-                <a href="/contact.html" class="block px-3 py-2 bg-admiral-gold text-admiral-navy rounded-md font-semibold">Contact</a>
+                <a href="/quote.html" class="block px-3 py-2 bg-admiral-gold text-admiral-navy rounded-md font-semibold">Contact</a>
             </div>
         </div>
     </nav>
@@ -172,12 +172,12 @@
                 <div>
                     <h3 class="font-semibold mb-4">Quick Links</h3>
                     <ul class="space-y-2 text-gray-300">
-                        <li><a href="/index.html" class="hover:text-admiral-gold transition-colors">Home</a></li>
+                        <li><a href="/" class="hover:text-admiral-gold transition-colors">Home</a></li>
                         <li><a href="/about.html" class="hover:text-admiral-gold transition-colors">About</a></li>
                         <li><a href="/services.html" class="hover:text-admiral-gold transition-colors">Services</a></li>
                         <li><a href="/powerpair.html" class="hover:text-admiral-gold transition-colors">PowerPair</a></li>
                         <li><a href="/case-studies.html" class="hover:text-admiral-gold transition-colors">Case Studies</a></li>
-                        <li><a href="/contact.html" class="hover:text-admiral-gold transition-colors">Contact</a></li>
+                        <li><a href="/quote.html" class="hover:text-admiral-gold transition-colors">Contact</a></li>
                     </ul>
                 </div>
                 
