--- a/about.html
+++ b/about.html
@@ -148,6 +148,16 @@
       <div class="mt-8">
         <img src="/public/images/david-edwards.jpg" alt="David Edwards, Founder of Admiral Energy" class="w-full h-auto rounded-xl shadow" />
         <p class="text-sm text-gray-600 mt-2">David, Founder &amp; Lead Advisor — North Carolina</p>
+        
+        <div class="mt-4 flex justify-center">
+          <a href="https://www.linkedin.com/in/david-edwards-admiralenergy/" 
+             target="_blank" 
+             rel="noopener noreferrer"
+             class="inline-flex items-center gap-2 text-admiral-navy hover:text-admiral-gold transition-colors">
+            <img src="/public/icons/linkedin.svg" alt="LinkedIn" class="w-5 h-5">
+            <span class="text-base font-medium">Connect on LinkedIn</span>
+          </a>
+        </div>
       </div>
     </main>
 
