--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h1 class="text-4xl md:text-6xl font-bold mb-6">Keep Your Home Running. No Matter What.</h1>
             <p class="text-xl md:text-2xl mb-8 text-blue-100">Backup Power Systems for North Carolina—battery first, solar when it makes sense.</p>
+            
+            <a href="https://www.linkedin.com/in/david-edwards-admiralenergy/" 
+               target="_blank" 
+               rel="noopener noreferrer"
+               class="inline-flex items-center gap-2 text-white hover:text-admiral-gold transition-colors mt-3 mb-6">
+              <img src="/public/icons/linkedin.svg" alt="LinkedIn" class="w-5 h-5">
+              <span class="text-base font-medium">David Edwards · Admiral Energy</span>
+            </a>
+            
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <a href="/quote.html" class="bg-admiral-gold text-admiral-navy px-8 py-4 rounded-lg font-semibold text-lg hover:bg-yellow-400 transition-colors">Get Your Backup Plan</a>
                 <a href="#approach" class="border-2 border-white text-white px-8 py-4 rounded-lg font-semibold text-lg hover:bg-white hover:text-admiral-navy transition-colors">How It Works ↓</a>
