--- a/case-studies.html
+++ b/case-studies.html
@@ -43,7 +43,7 @@
     </script>
     
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles.css?v=2025-10-30a">
     
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
