--- a/quote.html
+++ b/quote.html
@@ -139,7 +139,7 @@
             <form 
                 name="admiral-contact" 
                 method="POST" 
-                action="/thank-you/"
+                action="/thank-you.html"
                 data-netlify="true" 
                 netlify-honeypot="bot-field"
                 class="bg-white/90 p-6 md:p-8 rounded-2xl shadow-md ring-1 ring-black/5">
