fix: use form ID instead of name selector to prevent hidden form conflict

--- a/quote.html
+++ b/quote.html
@@ -353,7 +353,7 @@
         })();
 
         // Form Submission Event
-        const form = document.querySelector('form[name="admiral-contact"]');
+        const form = document.getElementById('admiral-contact-form');
         if (form) {
             form.addEventListener('submit', function(e) {
                 e.preventDefault(); // Prevent default Netlify redirect
